--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,23 @@
 Package: first_golem
 Title: FRIST_GOLEM
 Version: 0.0.0.9000
-Authors@R: person('Matt', 'Nickodemus', email = 'AUTHOR@MAIL.COM', role = c('cre', 'aut'))
-Description: This is my first golem application. I think it will be a
-                     good one, but you never know. I wonder where this text
-                     is going to end up. 
+Authors@R: 
+    person("Matt", "Nickodemus", , "AUTHOR@MAIL.COM", role = c("cre", "aut"))
+Description: This is my first golem application. I think it will be a good
+    one, but you never know. I wonder where this text is going to end up.
 License: MIT + file LICENSE
 Imports: 
+    bslib,
     config (>= 0.3.1),
     golem (>= 0.3.2),
     shiny (>= 1.7.1)
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
+URL: https://github.com/dsu-effectiveness/first_golem
+BugReports: https://github.com/dsu-effectiveness/first_golem/issues
